Add console output for each test, add constructors test